Implement welcome page

--- a/app/assets/stylesheets/abstract/_positions.scss
+++ b/app/assets/stylesheets/abstract/_positions.scss
@@ -2,54 +2,18 @@
   padding: 0px !important;
 }
 
+.no-padding-left {
+  padding-left: 0px !important;
+}
+
+.no-padding-right {
+  padding-right: 0px !important;
+}
+
 .no-marging{
   margin: 0px !important;
 }
 
-.margtop10 {
-  margin-top: 10px;
-}
-
-.margtop20 {
-  margin-top: 20px;
-}
-
-.margtop40 {
-  margin-top: 40px;
-}
-
-.margtop60 {
-  margin-top: 60px;
-}
-
-.margtop80 {
-  margin-top: 80px;
-}
-
-.margleft5 {
-  margin-left: 5px;
-}
-
-.margleft10 {
-  margin-left: 10px;
-}
-
-.margbottom10 {
-  margin-bottom: 10px;
-}
-
-.margbottom20 {
-  margin-bottom: 20px;
-}
-
-.margbottom40 {
-  margin-bottom: 40px;
-}
-
-.margbottom60 {
-  margin-bottom: 60px;
-}
-
-.margbottom80 {
-  margin-bottom: 80px;
+.margin-auto {
+  margin: auto;
 }
