--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@
 @import 'abstract/shape';
 
 // VIEWS
+// home
+@import "views/home/index";
+
 // main
 @import "views/main/main";
 @import "views/main/authentication";
