--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
                   <ul>
                       <li> <a href="#"> <%= t '.ideia' %> </a> </li>
                       <li> <a href="#"> <%= t '.team'  %></a> </li>
-                      <li> <a href="#"> <%= t '.contact' %> </a> </li>
+                      <li> <a href="https://github.com/jonaselan" target="_blank"> <%= t '.contact' %> </a> </li>
                       <li> <a href="https://github.com/jonaselan/BNativus" target="_blank"> <%= t '.contribute' %> </a> </li>
                   </ul>
               </div>
@@ -26,6 +26,7 @@
                       <li> <%= link_to t('rooms_text'), rooms_path, class: 'nav-link' %> </li>
                       <li> <%= link_to 'Debates', debates_path, class: 'nav-link' %> </li>
                       <li> <%= link_to t('articles_text'), articles_path, class: 'nav-link' %> </li>
+                      <li> <%= link_to 'Donate', class: 'nav-link' %> </li>
                   </ul>
               </div>
           </div>
@@ -35,9 +36,9 @@
             </div>
             <div class="col-lg-6">
               <ul class="nav pull-right social">
-                <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                <li> <a href="#"> <i class=" fa fa-facebook"> </i></a></li>
+                <li> <a href="#"> <i class="fa fa-twitter"> </i></a></li>
+                <li> <a href="https://github.com/jonaselan/BNativus" target="_blank"> <i class="fa fa-github"> </i></a></li>
                 <!-- <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
                 <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li> -->
               </ul>
