--- a/app/views/shared/_room_card.html.erb
+++ b/app/views/shared/_room_card.html.erb
@@ -25,7 +25,7 @@
         <% end %>
       </div>
       <hr>
-      <%= link_to(room.link, class: 'model-link') do %>
+      <%= link_to(room.link, class: 'model-link', target: '_blank') do %>
         <h4>
           <i class="fa fa-globe" aria-hidden="true"></i> <%= t room.language.name %>
         </h4>
