Minor fix on welcome page
Add some translate

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,7 +107,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3> Atualmente o BNativus está em sua versão beta, logo é importante escutar nossos usuários, para sempre procurar melhorar </h3>
+          <h3> Atualmente o BNativus está em sua versão beta, logo estamos procurando
+             melhorar cada funcionalidade. Deixe sua opinião e ajude </h3>
           <a target="_blank" href="https://goo.gl/forms/kIW3XhoMxV7e5TeS2" class="btn">Avalie!</a>
         </div>
       </div>
