--- a/app/views/users/my_debates.html.erb
+++ b/app/views/users/my_debates.html.erb
@@ -17,7 +17,7 @@
           <%= render partial: "shared/posting/posting_card", collection: @debates, as: :posting %>
         </div>
         <div class="more-models">
-          <%= link_to t('.more_debates'), debates_path %>
+          <%= link_to t('more_debates'), debates_path %>
         </div>
       </div>
     </div>
