--- a/app/views/users/my_rooms.html.erb
+++ b/app/views/users/my_rooms.html.erb
@@ -17,7 +17,7 @@
           <%= render partial: "shared/room_card", collection: @rooms, as: :room %>
         </div>
         <div class="more-models">
-          <%= link_to t('.more_rooms'), rooms_path %>
+          <%= link_to t('more_rooms'), rooms_path %>
         </div>
       </div>
     </div>
