--- a/app/views/users/informations/index.html.erb
+++ b/app/views/users/informations/index.html.erb
@@ -6,7 +6,7 @@
         <h6>Precisamos de mais algumas informações importantes sobre você </h6>
         <hr class="colorgraph">
 
-        <%= form_for(current_user, as: :user, url: add_more_informations_users_path, method: :patch) do |f| %>
+        <%= form_for(current_user, as: :user, url: user_information_path(id: current_user.id), method: :patch) do |f| %>
           <div class="form-group">
             <label for="">De onde você é?</label><br />
             <%= f.select(:country, [], {}, { class: 'custom-select' }) do %>
@@ -45,7 +45,6 @@
               <%= f.submit "Continuar", class: 'btn btn-lg btn-success btn-block' %>
             </div>
           </div>
-
         <% end %>
 			</fieldset>
   	</div>
