Implement rooms' search
Minor fix on translante and layout

--- a/app/assets/stylesheets/views/home/index.scss
+++ b/app/assets/stylesheets/views/home/index.scss
@@ -1,13 +1,7 @@
 #welcome {
-  .btn {
-    background-color: white;
-    color: black;
+  .btn-bnativus {
     padding: 20px 50px;
     margin: 5px;
-    border: 1px solid $green;
-    &:hover{
-      background-color: $green;
-    }
   }
 
   /* info */
