--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,8 @@
         <h2> BNativus </h2>
         <span class="introduction-text align-middle">Pratique uma nova lingua estrangeira com pessoas ao redor do mundo, totalmente de graça</span>
         <br>
-        <%= link_to t('application.signup'), new_user_registration_path, class: 'btn' %>
-        <%= link_to t('application.loginin'), new_user_session_path, class: 'btn' %>
+        <%= link_to t('application.signup'), new_user_registration_path, class: 'btn btn-bnativus' %>
+        <%= link_to t('application.loginin'), new_user_session_path, class: 'btn btn-bnativus' %>
       </div>
     </div>
   </div>
@@ -109,7 +109,7 @@
         <div class="col-lg-12 text-center">
           <h3> Atualmente o BNativus está em sua versão beta, logo estamos procurando
              melhorar cada funcionalidade. Deixe sua opinião e ajude </h3>
-          <a target="_blank" href="https://goo.gl/forms/kIW3XhoMxV7e5TeS2" class="btn">Avalie!</a>
+          <a target="_blank" href="https://goo.gl/forms/kIW3XhoMxV7e5TeS2" class="btn-bnativus">Avalie!</a>
         </div>
       </div>
     </div>
