--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -65,7 +65,7 @@
         <br>
       <% end %>
     </div>
-    <%= link_to_add_association 'Add', f, :user_languages_studieds, class: 'btn', partial: 'shared/languages_studieds_fields',
+    <%= link_to_add_association 'Add', f, :user_languages_studieds, class: 'btn btn-bnativus', partial: 'shared/languages_studieds_fields',
         data: { association_insertion_node: '.user_languages_studieds', association_insertion_method: :append } %>
   </div>
   <hr>
@@ -78,7 +78,7 @@
         <br>
       <% end %>
     </div>
-    <%= link_to_add_association 'Add', f, :user_known_languages, class: 'btn', partial: 'shared/known_languages_fields',
+    <%= link_to_add_association 'Add', f, :user_known_languages, class: 'btn btn-bnativus', partial: 'shared/known_languages_fields',
         data: { association_insertion_node: '.user_known_languages', association_insertion_method: :append } %>
   </div>
 
