--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,7 +109,7 @@
         <div class="col-lg-12 text-center">
           <h3> Atualmente o BNativus está em sua versão beta, logo estamos procurando
              melhorar cada funcionalidade. Deixe sua opinião e ajude </h3>
-          <a target="_blank" href="https://goo.gl/forms/kIW3XhoMxV7e5TeS2" class="btn-bnativus">Avalie!</a>
+          <a target="_blank" href="https://goo.gl/forms/kIW3XhoMxV7e5TeS2" class="btn btn-bnativus">Avalie!</a>
         </div>
       </div>
     </div>
