Create inherent between article and debate
This definitely should be improv

--- a/app/views/debates/index.html.erb
+++ b/app/views/debates/index.html.erb
@@ -1,34 +1,1 @@
-<div class="container">
-  <div class="container-default">
-    <div class="row">
-      <div class="col-lg-8">
-        <h1>Debates</h1>
-      </div>
-      <div class="col-lg-4">
-        <%= link_to t('create_debate'), new_debate_url, class: 'float-right' %>
-      </div>
-    </div>
-    <%= form_tag debates_path, method: :get do %>
-      <div class="row">
-        <div class="col-lg-auto">
-          <%= label_tag Debate.human_attribute_name(:language) %><br />
-          <%= select_tag("language", options_for_select(@languages, params[:language]), class: 'custom-select', include_blank: true) %>
-        </div>
-        <div class="col-lg-auto">
-          <%= label_tag Debate.human_attribute_name(:category) %><br />
-          <%= select_tag("category", options_for_select(@categories, params[:category]), class: 'custom-select', include_blank: true) %>
-        </div>
-        <div class="col-lg-auto mt-4">
-          <%= submit_tag 'filter', class: 'btn btn-bnativus' %>
-        </div>
-      </div>
-    <% end %>
-    <% unless @debates.empty? %>
-      <div class="row">
-        <%= render partial: "shared/posting/posting_card", collection: @debates, as: :posting %>
-      </div>
-    <% else %>
-      <h2 class="text-center mt-4 mb-4"> <%= t 'result_not_found' %> </h2>
-    <% end %>
-  </div>
-</div>
+<%= render partial: "shared/posting/index", locals: { postings: @debates, type: 'debate' } %>
