--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,1 @@
-<div class="container">
-  <div class="container-default">
-    <div class="row">
-      <div class="col-lg-8">
-        <h1><%= t 'articles_text' %></h1>
-      </div>
-      <div class="col-lg-4">
-        <%= link_to t('create_article'), new_article_url, class: 'float-right' %>
-      </div>
-    </div>
-    <% unless @articles.empty? %>
-      <div class="row">
-        <%= render partial: "shared/posting/posting_card", collection: @articles, as: :posting %>
-      </div>
-    <% else %>
-      <h2 class="text-center mt-4 mb-4"> <%= t 'result_not_found' %> </h2>
-    <% end %>
-  </div>
-</div>
+<%= render partial: "shared/posting/index", locals: { postings: @articles, type: 'article' } %>
