--- a/app/views/users/informations/index.html.erb
+++ b/app/views/users/informations/index.html.erb
@@ -2,20 +2,20 @@
   <div class="row justify-content-md-center">
     <div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-3">
 			<fieldset>
-				<h2>Almost there</h2>
-        <h6>Precisamos de mais algumas informações importantes sobre você </h6>
+				<h2><%= t 'more_information.almost_there' %></h2>
+        <h6><%= t 'more_information.info_about_u' %></h6>
         <hr class="colorgraph">
 
         <%= form_for(current_user, as: :user, url: user_information_path(id: current_user.id), method: :patch) do |f| %>
           <div class="form-group">
-            <label for="">De onde você é?</label><br />
+            <label for=""><%= t 'more_information.where_u_from' %></label><br />
             <%= f.select(:country, [], {}, { class: 'custom-select' }) do %>
               <%= options_for_select(select_countries, f.object.country) %>
             <% end %>
           </div>
 
           <div class="form-group">
-            <h5 for=""> idioma que está estudando </h5>
+            <h5 for=""> <%= t 'more_information.language_study' %> </h5>
             <br>
             <div class="user_languages_studieds">
               <%= f.fields_for :user_languages_studieds do |ff| %>
@@ -28,7 +28,7 @@
           </div>
 
           <div class="form-group">
-            <h5 for=""> idioma que você domina </h5>
+            <h5 for=""> <%= t 'more_information.main_language' %> </h5>
             <br>
             <div class="user_known_languages">
               <%= f.fields_for :user_known_languages do |ff| %>
