Change background image
Add roadmap to README

--- a/app/assets/stylesheets/views/main/main.scss
+++ b/app/assets/stylesheets/views/main/main.scss
@@ -10,6 +10,9 @@ body {
     }
   }
   .main-div {
+    background-image: image-url("background.png");
+    background-position: bottom;
+    background-repeat: repeat-x;
     min-height: 400px;
   }
   .container-default {
