Minor fix on translate

--- a/app/views/users/informations/index.html.erb
+++ b/app/views/users/informations/index.html.erb
@@ -42,7 +42,7 @@
           <hr class="colorgraph">
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6">
-              <%= f.submit "Continuar", class: 'btn btn-lg btn-success btn-block' %>
+              <%= f.submit(t('continue') , class: 'btn btn-lg btn-success btn-block') %>
             </div>
           </div>
         <% end %>
