Implement login with facebook

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag("world.jpg", class: 'card-img-top') %>
       </div>
       <div class="col-lg-4 text-center margin-auto">
-        <h2> BNativus </h2> <h3>beta</h3>
+        <h2> BNativus </h2> <span class="font-tiny"> beta </span>
         <span class="introduction-text align-middle">Pratique uma nova lingua estrangeira com pessoas ao redor do mundo, totalmente de graça</span>
         <br>
         <%= link_to t('application.signup'), new_user_registration_path, class: 'btn btn-bnativus' %>
