--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -40,6 +40,9 @@
                 <%= link_to user_google_oauth2_omniauth_authorize_path, class: 'btn btn-lg btn-block' do %>
                   Or register with <%= image_tag 'google-icon.png', class: 'google-img' %>
                 <% end %>
+                <%#= link_to user_facebook_omniauth_authorize_path, class: 'btn btn-lg btn-block' do %>
+                  <!-- Or register with facebook -->
+                <%# end %>
               </div>
             </div>
           <% end %>
