--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -57,7 +57,7 @@
   </div>
   <hr>
   <div class="form-group">
-    <h5 for=""> idioma que está estudando </h5>
+    <h5 for=""> <%= t 'more_information.language_study' %> </h5>
     <br>
     <div class="user_languages_studieds">
       <%= f.fields_for :user_languages_studieds do |ff| %>
@@ -70,7 +70,7 @@
   </div>
   <hr>
   <div class="form-group">
-    <h5 for=""> idioma que você domina </h5>
+    <h5 for=""> <%= t 'more_information.main_language' %> </h5>
     <br>
     <div class="user_known_languages">
       <%= f.fields_for :user_known_languages do |ff| %>
